# cookieclicker

./: pyproject.toml
cookieclicker/: building.py  main.py  utilities.py
cookieclicker/game_data/: Buildings.json
